--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   intl: ^0.20.2
   uuid: ^4.5.1
   flutter_cupertino_datetime_picker: ^3.0.0
+  flutter_slidable: ^4.0.0
 
 dev_dependencies:
   flutter_test:
